Trying to get it working with 2 apps to avoid flicker

--- a/KeeperOfCorpses/style.css
+++ b/KeeperOfCorpses/style.css
@@ -16,6 +16,11 @@ canvas {
     left: 0px;
 }
 
+canvas.secondary {
+    width: 300px;
+    height: 300px;
+}
+
 div.text {
     position: absolute;
     left: 0px;
